@@ -1,3 +1,8 @@
+2000-06-24  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/color.c: if is_log_z, then print the un-logged z_min, z_max around 
+	the color box
+
 2000-06-23  Johannes Zellner <johannes@zellner.org>
 
 	* src/gplt_x11.c: repaired `selection' (by left mouse).
